force-app/main/default/objects/QuoteLineItem/fields/List_Price_Rental__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Rental__c</fullName>
    <formula>IF(  ISBLANK( Sales_Price_Monthly__c ) , PricebookEntry.List_Price_Rental__c  ,Sales_Price_Monthly__c)</formula>
    <label>List Price Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>