force-app/main/default/objects/QuoteLineItem/fields/Sales_Price_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Monthly__c</fullName>
    <label>Sales Price Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>