force-app/main/default/objects/QuoteLineItem/fields/Sell_Price_Monthly_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price_Monthly_Per_Unit__c</fullName>
    <formula>IF( 
 BLANKVALUE( Sales_Price_Monthly__c , 0) == 0, 
 List_Price_Rental__c , 
 Sales_Price_Monthly__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Price Monthly Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>