force-app/main/default/objects/QuoteLineItem/fields/Sell_Price_Setup_Total__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price_Setup_Total__c</fullName>
    <formula>Sell_Price_Setup_Unit__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Price Setup Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>