force-app/main/default/objects/QuoteLineItem/fields/Sell_Price_Setup_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price_Setup_Unit__c</fullName>
    <formula>IF(
    BLANKVALUE(  UnitPrice , 0) == 0,
     PricebookEntry.UnitPrice ,
    UnitPrice

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Price Setup Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>